name:             yoctolens
version:          0.1.0.0
synopsis:         Exactly what you need to make a Lens—and nothing more.
description:      This package exports a
                  <https://hackage.haskell.org/package/lens lens>-compatible type
                  and a function for making them, and that's literally it.
license:          OtherLicense
license-file:     LICENSE
author:           Getty Ritter <gettyritter@gmail.com>
maintainer:       Getty Ritter <gettyritter@gmail.com>
copyright:        ©2016 Getty Ritter
category:         Lenses
build-type:       Simple
cabal-version:    >= 1.12

library
  exposed-modules:     Lens.Yocto
  ghc-options:         -Wall
  build-depends:       base
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
