name:             yoctolens
version:          1.0
synopsis:         Exactly what you need to make a Lens—and nothing more.
description:      This package exports a
                  <https://hackage.haskell.org/package/lens lens>-compatible type
                  and a function for making them, and that's literally it.
license:          OtherLicense
license-file:     LICENSE
author:           Getty Ritter <yoctolens@infinitenegativeutility.com>
maintainer:       Getty Ritter <yoctolens@infinitenegatievutility.com>
copyright:        ©2018 Getty Ritter
category:         Lenses
build-type:       Simple
cabal-version:    >= 1.12

library
  exposed-modules:     Lens.Yocto
  ghc-options:         -Wall -Werror
  build-depends:       base
  default-language:    Haskell2010
